<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_show_share"
    tools:context="edu.hzuapps.androidlabs.Com1614080901130.Show">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_white"
            android:textSize="15sp"
            android:text="@string/movie_buttom"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_white"
            android:textSize="15sp"
            android:text="@string/food_buttom"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_white"
            android:textSize="15sp"
            android:text="@string/music_buttom"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_white"
            android:textSize="15sp"
            android:text="@string/travel_buttom"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

    <!--</FrameLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_white"
            android:textSize="15sp"
            android:text="@string/share" />

    </LinearLayout>

</LinearLayout>