<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_show_share"
    tools:context="edu.hzuapps.androidlabs.Com1614080901130.Share">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_title"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <!--分享的版块-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/share_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_block"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:entries="@array/block"/>
        </LinearLayout>

        <!--分享者的名字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/share_name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="40"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="LabelFor" />
        </LinearLayout>


        <!--分享的内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/share_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/share_content" />

            <EditText
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <!--显示提交后的内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/upload_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:ems="10"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>
            
        </LinearLayout>
        
    </LinearLayout>


    <!--上传分享-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg_white"
            android:text="@string/upload"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
